<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">乐享</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AirJoy</string>
    <string name="init_decoders">正在进行第一次解压解码包......</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">无法播放此视频.</string>
    <string name="VideoView_error_text_invalid_progressive_playback">抱歉，本设备不支持此视频流。</string>
    <string name="VideoView_error_text_unknown">抱歉, 本视频不能播放.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">播放/暂停</string>
    <string name="hide">隐藏</string>
    <string name="help_title">乐享 - 使用说明</string>
    <string name="hp_android_item">安卓用户</string>
    <string name="hp_iphone_item">苹果手机/平板用户</string>
    <string name="hp_video_item">观看演示视频</string>
    <string name="hp_android_title">安卓用户使用说明</string>
    <string name="hp_iphone_title">苹果手机/平板用户使用说明</string>
    <string name="hp_go">使用说明</string>
    <string name="hp_exit">退出使用说明</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="anyplay_copyright_err">抱歉，您的AirJoy未授权！</string>
    <string name="state_err_copyright">未授权</string>
    <string name="state_err_net">网络故障</string>
    <string name="state_err_colse">服务关闭</string>
    <string name="state_ok">运行中…</string>
    <string name="wifi_disable">您的Wifi网络未连接，需要Anyplay服务,请连接Wifi.</string>
    <string name="airplay_disable">很抱歉，您的适用版本已经停用.</string>
    <string name="ok">确定</string>
    <string name="known">知道了</string>
    <string name="demonstrate">演示版</string>
    <string name="modefy_name">修改设备名称</string>
    <string name="minfo">乐享可以让您从苹果设备上以无线推送的方式显示图片和播放视频。</string>
    <string name="murl">请访问 www.airjoy.cn 获得更多信息</string>
    <string name="hs_url">本版本为海信版,访问 www.airjoy.cn 可获得更多信息。</string>
    <string name="modefy_name_info">可以为您的电视命名一个您喜欢的名字.</string>
    <string name="modefy_name_err">您的命名不合法.</string>
    <string name="modefy_name_err_lenth">您的命名 太长了，不能超过16个字符</string>
    <string name="set_switch">乐 享:</string>
    <string name="set_name">设备名称:</string>
    <string name="set_onoff">开关设置:</string>
    <string name="ver">版 本:</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="old_name">原名称:</string>
    <string name="new_name">新名称:</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="modefy">修改</string>
    <string name="stating">正在打开</string>
    <string name="closing">正在关闭</string>
    <string name="note">提示</string>
    <string name="updata">更新</string>
    <string name="localCatch">/anyplay/catch_img/</string>
    <string name="net_err_msg">您的网络发生故障，请检查您的网络连接!</string>
    <string name="dev_net_err_msg">网络获取数据失败，请检查您的网络连接!</string>
    <string name="player_err_msg">抱歉，不支持此格式!</string>
    <string name="screen_note">您好，本软件适用于屏幕分辨率至少为1280*800的设备!</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    
    
    <string name="video_loading">数据加载中，请稍后...</string>
    <string name="video_tryplay_other">硬解码失败，尝试软解码...</string>
     <string name="progress_msg">努力加载中，请稍后...</string>
    <string name="img_msg_room">您的存储空间不足!</string>
    <string name="img_msg_getfail">获取图片失败!</string>

    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">应用程序有新版本更新</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
</resources>
