<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/hs_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="32.0sp" android:textColor="#ff2e3439" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/modefy_name" />
        <ImageView android:id="@id/hs_line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:src="@drawable/hs_line" android:contentDescription="@string/app_name" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip">
            <TextView android:textSize="30.0sp" android:textColor="#ff2e3439" android:gravity="fill_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/old_name" android:singleLine="true" />
            <TextView android:textSize="30.0sp" android:textColor="#ff2e3439" android:id="@id/old_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="30.0dip">
            <TextView android:textSize="30.0sp" android:textColor="#ff2e3439" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/new_name" android:singleLine="true" />
            <RelativeLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_weight="1.0">
                <EditText android:textSize="30.0sp" android:textColor="#ff2e3439" android:id="@id/new_name" android:background="@drawable/hs_input_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:textSize="20.0dip" android:textColor="#ffff0000" android:id="@id/modefy_name_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:singleLine="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="40.0dip">
            <Button android:id="@id/modefy_name_confirm" android:background="@drawable/hs_btn" android:layout_height="wrap_content" android:text="@string/confirm" android:singleLine="true" style="@style/Sbutton" />
            <Button android:id="@id/modefy_name_cancel" android:background="@drawable/hs_btn" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/Sbutton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
